# ImageStag

./: .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs  wasm.rs
rust/src/filters/: blur.rs  color_adjust.rs  color_science.rs  core.rs  drop_shadow.rs  edge.rs  grayscale.rs  levels_curves.rs  lighting.rs  mod.rs  morphology.rs  noise.rs  sharpen.rs  stroke.rs  stylize.rs
rust/src/layer_effects/: lighting.rs  mod.rs  pattern_overlay.rs  stroke.rs
rust/src/selection/: contour.rs  magic_wand.rs  marching_squares.rs  mod.rs
stagforge/: CLAUDE.md  LICENSE  README.md  __init__.py  canvas_editor.js  canvas_editor.py  config.py  https_proxy.py  main.py  pyproject.toml  sfr.py  standalone.py
stagforge/api/: browser.py  data_cache.py  documents.py  effects.py  filters.py  rendering.py  router.py  sessions.py  svg_samples.py  tools.py  upload.py  upload_queue.py
stagforge/api/static/browser/: app.js  index.html  style.css
stagforge/bridge/: __init__.py  editor_bridge.py  exceptions.py  session.py
stagforge/bugs/: api-browser-truncates-session-name.md  autosave-loses-documents-on-reload.md  bevel-emboss-params-no-effect.md  close-all-menus-not-function.md  concave-polygon-marching-lines-broken.md  crop-tool-vector-layers.md  direct-selection-vector-layer-offset-issues.md  edge-filters-ignore-alpha.md  eyedropper-svg-vector-layers.md  filter-shifts-rotated-layer.md  gradient-offset-on-shifted-layer.md  layer-preview-excessive-fetching.md  load-selection-not-enabled-after-save.md  marching-lines-blurry-at-zoom.md  merge-down-enabled-for-bottom-layer.md  new-document-clears-all.md  polygonal-selection-not-grouped.md  rasterize-no-undo.md  rasterize-shown-for-pixel-layers.md  rasterize-vector-layer-shifts-to-origin.md  redundant-mini-color-selector.md  rotation-menu-not-working.md  sharpen-tool-broken.md  text-layer-edit-creates-new-instead-of-update.md  text-layer-not-editable-on-reclick.md  text-layer-undo-not-working.md  tool-hotkeys-not-working.md  vector-shape-on-text-layer-error.md  zoom-number-overflow-navigator.md
stagforge/docs/: API.md  ARCHITECTURE.md  AUTO_SAVE.md  HISTORY_SYSTEM.md  LAYERS.md  LAYER_TRANSFORMS.md  NICEGUI_INTEGRATION.md  SELECTION_SYSTEM.md  SFR_FILE_FORMAT.md  SVG_EFFECT_COMPATIBILITY.md  TESTING.md  TOOLS.md  VECTOR_RENDERING.md  VERSIONING.md  WEBSOCKET_BRIDGE.md
stagforge/effects/: __init__.py  drop_shadow.py  gradient_overlay.py  inner_glow.py  inner_shadow.py  outer_glow.py  stroke.py
stagforge/examples/: __init__.py  nicegui_astronaut.py
stagforge/filters/: __init__.py  artistic.py  base.py  blur.py  color.py  edge.py  morphology.py  noise.py  registry.py  sharpen.py  threshold.py
stagforge/formats/: __init__.py  document_generator.py  sfr.py
stagforge/frontend/css/: main.css
stagforge/frontend/css/modes/: limited.css  tablet.css
stagforge/frontend/css/themes/: dark.css  light.css
stagforge/frontend/icons/: LICENSE
stagforge/frontend/js/: app.js
stagforge/frontend/js/bridge/: EditorBridgeClient.js
stagforge/frontend/js/config/: ActionRegistry.js  EditorConfig.js  ExportConfig.js  ThemeManager.js  UIConfig.js  constants.json  document-adjectives.json  document-nouns.json  icon-picker.json  (+1 more)
stagforge/layers/: __init__.py  base.py  document.py  frame.py  layer_group.py  page.py  pixel_layer.py  svg_base.py  svg_layer.py  text_layer.py
stagforge/nicegui/: __init__.py  editor.py
stagforge/rendering/: __init__.py  document.py  svg_layer.py  vector.py
stagforge/sessions/: __init__.py  manager.py  models.py
stagforge/tasks/: alt-sample-color.md  ctrl-move-tool.md  eyedropper-live-color-preview.md  layer-menu-reorganization.md  polygonal-selection.md  rotate-image-90-180-270.md  selection-grow-shrink.md  selection-performance-optimization.md  selection-save-restore.md  session-browser-show-session-name.md  space-pan.md  tab-hide-ui.md  text-layer-inline-editing.md
stagforge/templates/: editor.html
(+620 files in other folders)
